# detr.jax

./: .gitignore  README.md  justfile  pyproject.toml
jdetr/: __main__.py  _typing.py  data.py  losses.py  models.py  utils.py
jdetr/models/: __init__.py  backbone.py  detr.py  positional_encoding.py  transformer.py
tests/: conftest.py  test_data.py  test_detr.py  test_losses.py
